# Matrixagon

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
cmd_script/: Cargo.toml
doc/: proto.txt
matrixagon/: Cargo.toml  build.rs  frag.spv  vert.spv
matrixagon/resource/commands/: test00.wcb
matrixagon/resource/shaders/: cube.frag  flora.frag  ui.vert
matrixagon/resource/shaders-spirv/: cube.frag.spv  cube.vert.spv  flora.frag.spv  flora.vert.spv  ui.frag.spv  ui.vert.spv
matrixagon/src/: app.rs  datatype.rs  main.rs  util.rs
matrixagon/src/event/: mod.rs  types.rs
matrixagon/src/render/: buffers.rs  command.rs  mod.rs  pipeline.rs
matrixagon/src/threadpool/: mod.rs
matrixagon/src/ui/: mod.rs
matrixagon/src/ui/layout/: horiz_lyt.rs  stack_lyt.rs
matrixagon/src/ui/widgets/: mod.rs  text.rs
matrixagon/src/world/: chunk.rs  chunk_handler.rs  chunk_threadpool.rs  mod.rs  shader.rs  texture.rs
matrixagon/src/world/block/: registry.rs
matrixagon/src/world/commands/: bytecode.rs  mod.rs  tokenizer.rs
matrixagon/src/world/mesh/: cube.rs  flora_x.rs  mod.rs
matrixagon/src/world/player/: camera.rs  mod.rs
matrixagon/src/world/terrain/: mod.rs
renderer/: Cargo.toml
renderer/src/: buffer.rs  command_buffers.rs  descriptors.rs  device.rs  lib.rs  pipeline.rs  swapchain.rs
resource/commands/: test00.wcb
resource/shaders/: cube.frag  cube.vert  flora.vert  ui.frag
src/: app.rs  chunk.rs  datatype.rs  main.rs  math.rs  shader.rs  texture.rs  world.rs
src/block/: mod.rs  state.rs
src/event/: mod.rs  types.rs
src/mesh/: cube.rs  mod.rs
src/player/: camera.rs  mod.rs
src/terrain/: mod.rs
src/ui/: mod.rs
src/world/: chunk.rs  chunk_handler.rs  chunk_threadpool.rs  mod.rs  (+3 more)
(+14 files in other folders)
