[package]
name = "the_endless_world"
version = "0.1.0"
authors = ["Andrew Shen <andrewshen31@gmail.com>"]
edition = "2018"

# minecraft                  <--- Testing name length
# New name candidate list
# dynoblastdomide
#

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#/*****************************************
# When using `vulkano_shaders` crate,
# be sure ninja and cmake
# is installed to the path.
#*****************************************/

vulkano = "0.18.0"
vulkano-shaders = "0.13"
vulkano-win = "0.18.0"
winit = "0.22.0"

nalgebra-glm = "0.7.0"
cgmath = "0.17.0"  # TODO: depracated; in replace of nalgebra-glm

png = "0.16.5"
oorandom = "11.1.2"
