[package]
name = "matrixagon"
version = "0.1.6"
authors = ["Andrew Shen <andrewshen31@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#/*****************************************
# When using `vulkano_shaders` crate,
# be sure ninja and cmake
# is installed to the path.
#*****************************************/

# internal modules
ash = "0.31.0"
renderer = { path = "../renderer" }

# primary crates
vulkano = "0.19.0"
vulkano-win = "0.19.0"
vulkano-shaders = "0.19.0"
winit = "0.23.0"

# seconday crates
num-traits = "0.2"
nalgebra = "0.21.1"
rayon = "1.3.1"
crossbeam = "0.7.3"
num_cpus = "1.13.0"

# external functionalities crates
png = "0.16.5"
oorandom = "11.1.2"

# internal (codebase improvements) crates
maplit = "1.0.2"
strum = "0.19"
strum_macros = "0.19"
